--- a/web/src/components/google-maps.module.css
+++ b/web/src/components/google-maps.module.css
@@ -1,4 +1,3 @@
 .root {
   height: 50vh;
-  border: 1px solid red;
 }
